# cochlear_implant_sonification

./: .gitignore  README.md  jupyter-lite.json  pyproject.toml
.github/workflows/: deploy.yml
notebooks/: demo.ipynb
src/: __init__.py  channel_selection.py  compression.py  envelope.py  filterbank.py  vocoder.py
