[project]
name = "cochlear-implant-sonification"
version = "0.1.0"
description = "Interactive demonstration of cochlear implant signal processing pipeline"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "xhao" }]
keywords = ["cochlear-implant", "vocoder", "signal-processing", "sonification"]

dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "matplotlib>=3.7.0",
    "librosa>=0.10.0",
    "ipywidgets>=8.0.0",
    "ipython>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "jupyterlab>=4.0.0",
    "voici>=0.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [
    "jupyterlab>=4.0.0",
    "voici>=0.6.0",
    "pytest>=7.0.0",
]
